tests/parser/good/self/35.lat
int main(int a) {
    int[] a = new int[0];
    for (int b : a) {
        return 0;
    }
    return 0;
}
