tests/parser/bad/variable_use/6.lat
int main() {
    int a = new jazda;
    return 0;
}